Finished the game. Added all the methods remaining, and fixed lots of bugs. Changed the way keyboard input is received, now though a buffer in order to prevent the snake from going inside itself. Snake collides with itself to lose the game. Fixed the bug where, in the start of the game, the snake would appear to have been cut (a cell from its body wasnt visible because of the order of some function calls in slither()).

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,8 @@
     --lightgray: #44475a;
     --white: #f8f8f2;
     --blueishgray: #6272a4;
-    --purple: #bd93f9;
     --green: #50fa7b;
+    --red: #ff5555;
 }
 
 *{
@@ -57,8 +57,11 @@ body{
 .cellsnake{
     background-color: var(--green);
     border: solid 1px var(--darkgray);
-    text-align: center;
-    font-weight: 400;
-    font-size: 25px;
-    color: var(--darkgray);
+
+}
+
+.cellfruit{
+    background-color: var(--red);
+    border: solid 1px var(--darkgray);
+
 }
